--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.12.0"
   },
   "devDependencies": {
+    "@prisma/client": "^5.17.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
