--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "tsc -w",
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon app.ts"
