--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w",
+    "dev": "nodemon dist/app.js",
     "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon app.ts"
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
